--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="frontend/src/assets/logo.png"/>
+    <link rel="icon" href="../src/assets/logo.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Urban Gardening for Beginners</title>
   </head>
